--- a/src/Styles/DisplayDrinks.css
+++ b/src/Styles/DisplayDrinks.css
@@ -1,6 +1,5 @@
 /* DisplayDrinks */
 .drinkGroup {
-    justify-content: space-between;
     display: flex;
     margin-top: 12px;
 }
@@ -12,7 +11,6 @@
     border:1px solid black;
     text-align: center;
     margin-bottom: 10px;
-    margin-right: 5px;
 }
   
 .drinkListIntro {
@@ -48,7 +46,6 @@
     flex-basis: calc(50%);
     border:1px solid black;
     text-align: center;
-    margin-left: 5px;
     margin-bottom: 10px;
     overflow-y: auto;
 }
@@ -57,37 +54,22 @@
     margin-bottom: 15px;
     text-align: center;
 }
+
+.establishmentNameLabel {
+    font-weight: bold;
+}
   
 .establishmentNameInput {
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     line-height: 26.67px;
-    color: #f2f2f2;
     text-align: center;
-    background-color: #333;
-    border-color: #333;
     border-style: solid;
     border-width: 1px;
-    padding-left: 5px;
-    padding-right: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
     letter-spacing: 0.25px;
-    width: 200px;
-}
-
-::placeholder {
-    color: #f2f2f2;
-}
-
-.establishmentNameInput:hover {
-    background-color: #F1F1F1;
-    color: black;
-    border: 1px solid black;
-}
-
-.establishmentNameInput:hover::placeholder {
-    color: black;
 }
   
 .space {
