--- a/src/Styles/ItemSelector.css
+++ b/src/Styles/ItemSelector.css
@@ -57,7 +57,7 @@
     display: inline-block;
 }
 
-.buttonGroup {
+.itemButtonGroup {
     margin-top: 10px;
 }
   
@@ -74,4 +74,9 @@
     background-color: #F1F1F1;
     color: black;
     border: 1px solid black;
+}
+
+.displayButtonGroup {
+    text-align: center;
+    margin-bottom: 12px;
 }
