Buildout of NearlyAttainableDrinks and major update to ItemSelector
Completing NearlyAttainableDrinks, updating ItemSelector to contain logic for all child components, formatting/commenting throughout all files

--- a/src/Styles/NearlyAttainableDrinks.css
+++ b/src/Styles/NearlyAttainableDrinks.css
@@ -1,4 +1,4 @@
-/* DisplayDrinks */
+/* NearlyAttainableDrinks */
 .drinkGroup {
     display: flex;
     margin-top: 12px;
@@ -14,21 +14,10 @@
 }
   
 .drinkListIntro {
-    margin-bottom: 0;
+    margin-bottom: 15px;
     padding: 0;
 }
-  
-.drinkContainer {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: left;
-}
-  
-.drinkName {
-    text-align: center;
-}
-  
+
 .drinkButtonContainer {
     padding: 2px;
 }
@@ -40,7 +29,13 @@
     padding: 2px;
     transition-delay: 0.4s;
 }
-  
+
+.space {
+    width: 8px;
+    height: auto;
+    display: inline-block;
+}
+
 .detailsColumn {
     height: 500px;
     flex-basis: calc(50%);
@@ -49,47 +44,18 @@
     margin-bottom: 10px;
     overflow-y: auto;
 }
+ 
+.drinkContainer {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: left;
+}
   
-.buttonContainer {
-    margin-bottom: 15px;
+.drinkName {
     text-align: center;
 }
 
-.establishmentNameLabel {
-    font-weight: bold;
-}
-  
-.establishmentNameInput {
-    display: inline-block;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    line-height: 26.67px;
+.missingItems {
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    letter-spacing: 0.25px;
-}
-  
-.space {
-    width: 8px;
-    height: auto;
-    display: inline-block;
-}
-  
-.primaryButton {
-    color: #f2f2f2;
-    background-color: #333;
-    font-size: 16px;
-    border: 1px solid #333;
-    letter-spacing: 0.25px;
-    padding: 5px;
-    margin-top: 5px;
-}
-
-.primaryButton:hover {
-    background-color: #F1F1F1;
-    color: black;
-    border: 1px solid black;
 }
