Feature Updates and Corrections
1) Formatting update
2) Correcting ingredients for Rumple Juice
3) Consolidating Tequila selections
4) Re-enabling auto print on Generate Menu/Instructions
5) Menu formatting correction

--- a/src/Styles-Home/ItemSelector.css
+++ b/src/Styles-Home/ItemSelector.css
@@ -1,5 +1,9 @@
 /* ItemSelector */
 
+.description {
+    text-align: center
+}
+
 .checkboxGroup {
     justify-content: space-between;
     display: flex;
