--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,6 @@
   background-color: #F1F1F1;
   padding-top: 20px;
   border: none;
-}
-
-.subtitle {
-  text-align: center;
-  margin-bottom: 0;
-  margin-top: 0;
-  background-color: #F1F1F1;
-  padding-top: 5px;
   padding-bottom: 20px;
 }
 
@@ -33,8 +25,15 @@
   background-color: #333;
   border: none;
   height: 100%;
-  width: 200px;
-  font-size: 16px;
+  width: 35%;
+  font-size: 14px;
+}
+
+@media screen and (min-width: 576px) {
+  .navBarButton {
+    width: 200px;
+    font-size: 16px;
+  }
 }
 
 .navBarButton:hover {
