--- a/src/Styles-Home/DisplayDrinks.css
+++ b/src/Styles-Home/DisplayDrinks.css
@@ -1,38 +1,11 @@
 /* DisplayDrinks */
-.drinkGroup {
-    display: flex;
-    margin-top: 12px;
-}
-  
-.drinkColumn {
-    height: 500px;  
-    flex-basis: calc(50%);
-    overflow-y: auto;
+  .detailsColumn {
     border:1px solid black;
     text-align: center;
     margin-bottom: 10px;
+    overflow-y: auto;
 }
-  
-.drinkListIntro {
-    margin-bottom: 0;
-    padding: 0;
-}
-  
-.drinkContainer {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: left;
-}
-  
-.drinkName {
-    text-align: center;
-}
-  
-.drinkButtonContainer {
-    padding: 2px;
-}
-  
+
 .drinkButton {
     width: 69%;
     margin: auto;
@@ -40,18 +13,53 @@
     padding: 2px;
     transition-delay: 0.4s;
 }
-  
-.detailsColumn {
-    height: 500px;
-    flex-basis: calc(50%);
+
+.drinkButton {
+    width: 69%;
+    margin: auto;
+    font-size: 16px;
+    padding: 2px;
+    transition-delay: 0.4s;
+}
+
+.drinkColumn {
+    height: 250px;
+    overflow-y: auto;
     border:1px solid black;
     text-align: center;
     margin-bottom: 10px;
-    overflow-y: auto;
 }
-  
-.space {
-    width: 8px;
-    height: auto;
-    display: inline-block;
+
+.drinkContainer {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: left;
+}
+
+.drinkGroup {
+    margin-top: 12px;
+}
+ 
+.drinkListIntro {
+    margin-bottom: 0;
+    padding: 0;
+}  
+.drinkName {
+    text-align: center;
+}
+
+@media screen and (min-width: 836px) {
+    .drinkGroup {
+        display: flex;
+    }
+    .drinkColumn {
+        height: 500px;  
+        flex-basis: calc(50%);
+    }
+    .detailsColumn {
+        margin-left: 8px;
+        height: 500px;
+        flex-basis: calc(50%);
+    }
 }
